--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   padding: 20px;
   white-space: pre-wrap;
 "></div>
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+<script src="./js/bootstrap.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 <script src="https://kit.fontawesome.com/3dd28b3687.js" crossorigin="anonymous"></script>
 <div id="root">
 
